
5.1.0 -> 5.2a0:
    - jbj: filetriggers: rewite w splint annotations. much more todo++ here.
    - jbj: keyring: (re-)port keyring.[ch] w refcounts.
    - rpm.org: (re-)steal rpmkeyring.[ch] with added refcounts.
    - jbj: python: add rpm.td subtype methods for rpmtd.
    - jbj: rpmtd: expose symbols needed by python rpm.td.
    - jbj: rpmtd: rework rpmtdFormats lookup. more todo++.
    - jbj: rpmtd: initial port.
    - rpm.org: steal rpmtd.[ch] modules for porting.
    - rpm.org: steal rpmkeyring/rpmtd modules for porting work.
    - jbj: fix: use the uint64_t callback args, not the legacy compat copies.
    - rpm.org: Adjust for rpmps interface change.
    - rpm.org: Adjust callback for amount+total type change.
    - rse: upgrade "devtool" build environment to GNU shtool 2.0.8
    - bero: Fix hang when using rpmdsSingle and rpm4compat.h from C++
    - proyvind: clean out all build warnings for perl & python bindings.
    - jbj: gzdio: quadruple check with external -lz. still no fix => disabled.
    - jbj: gzdio: integrate the cpio tracking patch (needs to be done elsewhere)
    - jbj: gzdio: disable rsync flushing until a fix can be attempted.
    - jbj: gzdio: remove c99'ism.
    - proyvind: disable filetriggers for src.rpms.
    - jbj: band-aid test for tag->tagno != NULL for now. better needs doing.
    - jbj: fix: --changelog segfault from rpmpopt.in typo.
    - rse: fallback to xmalloc+strncpy if strndup is not available in filetriggers code
    - proyvind: adapt filetriggers to use miRE in stead of regex(3).
    - proyvind: merge pixel's filetriggers support.
    - rse: configure: do not complain with "python: file not found" on platforms without python(1) in PATH
    - rpm.org: use "Mono/.Net assembly" for mono magic.
    - jbj: rpmdav: OPTIONS on every new dir needs thought. per-session for now.
    - jbj: rpmdav: on 302, append the trailing '/' and retry. wotta pita.
    - jbj: rpmdav: grab Location: and ETag: if available.