@@ -1468,7 +1468,10 @@ done \
 %alpha  alpha alphaev56 alphaev6 alphaev67
 
 # and sparc
-%sparc sun4 sun4m sun4c sun4d sun4u sparc sparcv8 sparcv9 sparc64 sparc64v sparcv9b sparcv9v sparcv9v2
+%sparc sun4 sun4m sun4c sun4d sun4u sparcv9b sparcv9v2 %{sparcx}
+
+# add alternative sparc architectures macro (bugzilla #455972 patch)
+%sparcx sparc sparcv8 sparcv9 sparcv9v sparc64 sparc64v
 
 #------------------------------------------------------------------------
 # Use in %install to generate locale specific file lists. For example,
